# thexva

./: .gitmodules  CMakeLists.txt  Configure.h.in  README.md
cmake/: mytar.cmake  pugixml.cmake
src/: CMakeLists.txt  Configure.h  myxva.cc  myxva.h  pxva.cc
test/: main.cc  ova.cc  test.h
test/data/: ova.xml
