CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(myxva VERSION 1.0 DESCRIPTION "")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include(cmake/mytar.cmake)
include(cmake/pugixml.cmake)

SET(SPATH "src")

CONFIGURE_FILE(
        ${PROJECT_SOURCE_DIR}/Configure.h.in
        ${PROJECT_SOURCE_DIR}/${SPATH}/Configure.h
        @ONLY
)

ADD_SUBDIRECTORY(${SPATH})

